Bug 457639 - Lines from Mouse Mark effect are not captured in screenshot
Summary: Lines from Mouse Mark effect are not captured in screenshot
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.25.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
: 460139 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-08-08 17:40 UTC by saxn
Modified: 2022-10-10 18:54 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description saxn 2022-08-08 17:40:19 UTC
SUMMARY
Trouble :(


STEPS TO REPRODUCE
1. Enable mouse mark on Desktop effects
2. Draw in Desktop
3. Grab screenshot using print screen / spectacle

[POC]
https://youtu.be/s4Jr0ybbzUQ

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.18.16-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i5-9300H CPU @ 2.40GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630 + Nvidia
Comment 1 Antonio Prcela 2022-08-08 19:40:45 UTC
Can confirm on Wayland. Works on X11
Comment 2 saxn 2022-09-17 11:22:40 UTC
still not there in 5.26 ?
Comment 3 Enes Albay 2022-09-17 11:39:21 UTC
Confirmed.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.25.5
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.18.19-3-MANJARO (64 bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-8565U CPU @ 1.80GHz
Memory: 15,5 GiB RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Produces: HP
Product Name: HP ProBook 450 G6
Comment 4 Bug Janitor Service 2022-09-19 08:39:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2972
Comment 5 Vlad Zahorodnii 2022-09-19 19:22:15 UTC
Git commit 14513ebcdaf6f8d790abe1f013a557b15ed4f413 by Vlad Zahorodnii.
Committed on 19/09/2022 at 19:10.
Pushed by vladz into branch 'master'.

effects/mousemark: Specify effect chain position

M  +5    -0    src/effects/mousemark/mousemark.cpp
M  +1    -0    src/effects/mousemark/mousemark.h

https://invent.kde.org/plasma/kwin/commit/14513ebcdaf6f8d790abe1f013a557b15ed4f413
Comment 6 Vlad Zahorodnii 2022-09-19 19:26:26 UTC
Git commit 11f7387bad280bd0be50432fb1baf370db5f2a4f by Vlad Zahorodnii.
Committed on 19/09/2022 at 19:26.
Pushed by vladz into branch 'Plasma/5.26'.

effects/mousemark: Specify effect chain position


(cherry picked from commit 14513ebcdaf6f8d790abe1f013a557b15ed4f413)

M  +5    -0    src/effects/mousemark/mousemark.cpp
M  +1    -0    src/effects/mousemark/mousemark.h

https://invent.kde.org/plasma/kwin/commit/11f7387bad280bd0be50432fb1baf370db5f2a4f
Comment 7 Nate Graham 2022-10-10 18:54:03 UTC
*** Bug 460139 has been marked as a duplicate of this bug. ***