effects/mousemark: Specify effect chain position

BUG: 457639


(cherry picked from commit 14513ebcdaf6f8d790abe1f013a557b15ed4f413)